# NetW

scratch/: CMakeLists.txt
scratch1/cpp-cf-pa1/: CMakeLists.txt  README.md  info.sh  machine.out
scratch1/cpp-cf-pa1/user/: client_machine.cpp  client_machine.h  server_machine.cpp  server_machine.h  simpleMachine.cpp  simpleMachine.h
scratch2/cpp-cf/: CMakeLists.txt  info.sh
scratch2/cpp-cf/user/: client_machine.cpp  client_machine.h  nat_machine.cpp  nat_machine.h  server_machine.cpp  server_machine.h  simpleMachine.cpp  simpleMachine.h
scratch3/PA3-cpp-cf/: Makefile  connect_networks.sh  info.sh  node.sh
scratch3/PA3-cpp-cf/user/: sm.cpp  sm.h
